Stabilize in-memory job store retention test